unpackaged/main/default/objects/nbavs__Insight_Conversation__c/nbavs__Insight_Conversation__c.object-meta.xml
<CustomObject>
    <label>Insight Conversation</label>
    <nameField>
        <displayFormat>Conv-{00000}</displayFormat>
        <label>Insight Conversation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Conversations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>