unpackaged/main/default/objects/nbavs__Insight_Conversation__c/fields/nbavs__Account__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insight Conversations</relationshipLabel>
    <relationshipName>Account_Insight_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>