unpackaged/main/default/objects/nbavs__Insight_Conversation__c/fields/nbavs__Contact__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insight Conversations</relationshipLabel>
    <relationshipName>Contact_Insight_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>