unpackaged/main/default/objects/nbavs__Insight_Conversation__c/fields/nbavs__Group__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>nbavs__Group__c</referenceTo>
    <relationshipLabel>Insight Conversations</relationshipLabel>
    <relationshipName>Group_Insight_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>