unpackaged/main/default/objects/nbavs__Insight_Conversation__c/fields/nbavs__Instance__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Instance__c</fullName>
    <label>Instance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>