unpackaged/main/default/objects/nbavs__Insight_Conversation__c/fields/nbavs__Natterbox_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Natterbox_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Insight Conversations</relationshipLabel>
    <relationshipName>Insight_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>