unpackaged/main/default/objects/nbavs__Insight_Conversation__c/fields/nbavs__UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UUID__c</fullName>
    <label>UUID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>